   setBaseRef(), etc.
 - Replaced the CharacterSetPref, EncodingPref, LanguagePref and MediaTypePref by a generic Preference<Metadata> class.
 - Replaced Router.Mode enumeration by static constants on Router. Simplifies the Javadocs display and works well enough.
 - Moved all wrapper classes into a new org.restlet.util package
 - Moved org.restlet.Factory into a hidden org.restlet.spi.Factory package. Same thing for the NRE's Factory.
 - Replaced HostRouter.Mode enumeration by constants on HostRouter.
 
[Other changes] 
 - Separated the HTTP client connector (based on JDK's HttpUrlConnection) previously integrated to the NRE core. This will allow future alternative
   implementations like based on Apache HTTP Client or Apache MINA NIO framework. Please ensure that the new extension (com.noelios.restlet.ext.net) is
   added to your classpath when the application is making HTTP client calls.
 - Added ParameterList.getFirstValue() methods taking and additional "defaultValue" parameter.
 - Parameterized connectors
 - Added HTTPS connector for Jetty 6.0
 - The Jetty 6 extension now appears in the Javadocs due to the package renaming of the Jetty 5 extension.
 - Updated documentation, especially for the distribution. Suggested by Dave Pawson.
 - Added more control on Simple HTTPS connector, see list of parameters.
 - Updated AsyncWeb to version 0.8.2.
 - The number of worker threads can now be configured for AsyncWeb.
 - Refactored the names in the NRE's impl package, uses Abstract prefix for abstract classes and Default prefix for other ones implementing Restlet API.
 - The ServerServlet connector now copies all Servlet initialization parameters (from the Web Application then from the Web Container) into the connector
   parameters list. This allows the settings of the parameters related to HTTP server connectors in all cases (standalone or embedded).
 - ContextClient now uses parameters for its configuration (default encoding, language, mediatype, etc.).