@@ -137,7 +137,6 @@ public class Call
 	 * Returns a modifiable attributes map that can be used by developers to save information relative
 	 * to the current call. This is an easier alternative to the creation of a wrapper around the whole call.
 	 * @return The modifiable attributes map.
-	 * @see org.restlet.util.WrapperCall
 	 */
 	public Map<String, Object> getAttributes()
 	{
