@@ -20,12 +20,11 @@
  * Portions Copyright [yyyy] [name of copyright owner]
  */
 
-package org.restlet.util;
+package org.restlet;
 
 import java.util.List;
 import java.util.Map;
 
-import org.restlet.Call;
 import org.restlet.data.ClientData;
 import org.restlet.data.ConditionData;
 import org.restlet.data.Cookie;
