@@ -20,11 +20,8 @@
  * Portions Copyright [yyyy] [name of copyright owner]
  */
 
-package org.restlet.util;
+package org.restlet;
 
-import org.restlet.Call;
-import org.restlet.Context;
-import org.restlet.Restlet;
 
 /**
  * Wrapper for Restlet instances. Useful for application developer who need to enrich the Restlet with
