@@ -26,8 +26,8 @@ import java.util.Arrays;
 
 import org.restlet.connector.Client;
 import org.restlet.data.Protocol;
+import org.restlet.data.WrapperList;
 import org.restlet.spi.Factory;
-import org.restlet.util.WrapperList;
 
 /**
  * Modifiable map of client connectors.
