@@ -20,14 +20,10 @@
  * Portions Copyright [yyyy] [name of copyright owner]
  */
 
-package org.restlet.util;
+package org.restlet.data;
 
 import java.util.List;
 
-import org.restlet.data.Reference;
-import org.restlet.data.ReferenceList;
-import org.restlet.data.Representation;
-import org.restlet.data.Resource;
 
 /**
  * Resource wrapper. Useful for application developer who need to enrich the resource 
