@@ -76,10 +76,11 @@ Changes log
    setBaseRef(), etc.
  - Replaced the CharacterSetPref, EncodingPref, LanguagePref and MediaTypePref by a generic Preference<Metadata> class.
  - Replaced Router.Mode enumeration by static constants on Router. Simplifies the Javadocs display and works well enough.
- - Moved all wrapper classes into a new org.restlet.util package
  - Moved org.restlet.Factory into a hidden org.restlet.spi.Factory package. Same thing for the NRE's Factory.
  - Replaced HostRouter.Mode enumeration by constants on HostRouter.
- 
+ - Moved WrapperMap to NRE util package as it's not used anymore in the API.
+ - ScorerList now derives from WrapperList like similar classes (ClientList, ParameterList, etc.).
+  
 [Other changes] 
  - Separated the HTTP client connector (based on JDK's HttpUrlConnection) previously integrated to the NRE core. This will allow future alternative
    implementations like based on Apache HTTP Client or Apache MINA NIO framework. Please ensure that the new extension (com.noelios.restlet.ext.net) is
